--- a/static/style.css
+++ b/static/style.css
@@ -10,6 +10,7 @@ body{
 color: #000000;
 background-color: lightblue;
 font-family: Arial, Helvetica, sans-serif;
+font-align
 margin: 20px;
 }
 fieldset{
